@@ -96,7 +96,7 @@ dist:
 	tar cvf - $(DIST) | gzip -9c > $(DIST).tar.gz
 	rm -Rf $(DIST)
 	tar xf $(DIST).tar.gz
-	(cd $(DIST); make all check vercheck DEFAULTFONTDIR=fonts)
+	(cd $(DIST); make all check vercheck)
 	@rm -Rf $(DIST)
 	@echo
 	@ls -l $(DIST).tar.gz
@@ -104,7 +104,7 @@ dist:
 check:
 	@echo -n "Run tests in "
 	@pwd
-	@./run-tests.sh
+	@./run-tests.sh fonts
 	@echo
 
 vercheck:
