@@ -929,6 +929,13 @@ at UTF-8 unicode files,
 using the controlfile
 .IR utf8 .
 
+.SH ENVIRONMENT
+.TP
+.B FIGLET_FONTDIR
+If
+.RB $ FIGLET_FONTDIR
+is set, its value is used as a path to search for font files.
+
 .SH FILES
 .PD 0
 .TP 20
